[gd_scene load_steps=16 format=2]

[ext_resource path="res://SCRIPTS/stages.gd" type="Script" id=1]
[ext_resource path="res://FONT/nyala.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://LETTERS/rantor.png" type="Texture" id=3]
[ext_resource path="res://LETTERS/info.png" type="Texture" id=4]
[ext_resource path="res://LETTERS/EASY.png" type="Texture" id=5]
[ext_resource path="res://LETTERS/HARD.png" type="Texture" id=6]
[ext_resource path="res://LETTERS/watch_out.png" type="Texture" id=7]
[ext_resource path="res://LETTERS/exit.png" type="Texture" id=8]

[sub_resource type="Animation" id=1]
resource_name = "heading_anim"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("heading:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 17, 20 ), Vector2( 7, 20 ), Vector2( 17, 20 ), Vector2( 27, 20 ), Vector2( 17, 20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("heading:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "heading_anim"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("watch_pos:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 1, 1 ), Vector2( 1, -0.9 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "rantor_rotate"
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rantor_pos:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, -5.0, 5.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "rantor_anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("info:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("info:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 65, -140 ), Vector2( 65, 160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("info:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("easy:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("easy:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 280, -100 ), Vector2( 280, 200 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("easy:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("hard:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.7, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("hard:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 580, -90 ), Vector2( 580, 210 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("hard:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.7, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "watchout_anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("w_info:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("w_info:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 65, -140 ), Vector2( 65, 160 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("w_info:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("w_easy:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("w_easy:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.4, 1.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 280, -100 ), Vector2( 280, 200 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("w_easy:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1.1, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("w_hard:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1.7, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("w_hard:rect_position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.9, 1.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 580, -90 ), Vector2( 580, 210 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("w_hard:disabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1.7, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, true, false ]
}

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[node name="stages" type="Node"]
script = ExtResource( 1 )

[node name="heading_anim" type="AnimationPlayer" parent="."]
autoplay = "heading_anim"
anims/heading_anim = SubResource( 1 )

[node name="watch_anim" type="AnimationPlayer" parent="."]
anims/heading_anim = SubResource( 2 )

[node name="rantor_rotate" type="AnimationPlayer" parent="."]
autoplay = "rantor_rotate"
anims/rantor_rotate = SubResource( 3 )

[node name="heading" type="Label" parent="."]
margin_left = 17.0
margin_top = 20.0
margin_right = 195.0
margin_bottom = 50.0
rect_clip_content = true
custom_fonts/font = SubResource( 4 )
text = "PICK A STAGE"

[node name="rantor_pos" type="Position2D" parent="."]
position = Vector2( 110, 90 )

[node name="rantor" type="TextureButton" parent="rantor_pos"]
margin_left = -80.0
margin_top = -20.0
margin_right = 723.0
margin_bottom = 202.0
rect_scale = Vector2( 0.2, 0.2 )
toggle_mode = true
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="info" type="TextureButton" parent="rantor_pos/rantor"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 65.0
margin_top = -140.0
margin_right = 502.0
margin_bottom = 297.0
rect_scale = Vector2( 0.3, 0.3 )
disabled = true
texture_normal = ExtResource( 4 )

[node name="easy" type="TextureButton" parent="rantor_pos/rantor"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 280.0
margin_top = -100.0
margin_right = 832.0
margin_bottom = 94.0
rect_scale = Vector2( 0.4, 0.4 )
disabled = true
texture_normal = ExtResource( 5 )

[node name="hard" type="TextureButton" parent="rantor_pos/rantor"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 580.0
margin_top = -23.3333
margin_right = 1131.0
margin_bottom = 171.667
rect_scale = Vector2( 0.4, 0.4 )
disabled = true
texture_normal = ExtResource( 6 )

[node name="rantor_anim" type="AnimationPlayer" parent="rantor_pos/rantor"]
playback_speed = 5.0
anims/rantor_anim = SubResource( 5 )

[node name="watch_pos" type="Position2D" parent="."]
position = Vector2( 110, 180 )

[node name="watch_out" type="TextureButton" parent="watch_pos"]
margin_left = -80.0
margin_top = -20.0
margin_right = 723.0
margin_bottom = 202.0
rect_scale = Vector2( 0.2, 0.2 )
toggle_mode = true
texture_normal = ExtResource( 7 )

[node name="w_info" type="TextureButton" parent="watch_pos/watch_out"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 65.0
margin_top = -140.0
margin_right = 502.0
margin_bottom = 297.0
rect_scale = Vector2( 0.3, 0.3 )
disabled = true
texture_normal = ExtResource( 4 )

[node name="w_easy" type="TextureButton" parent="watch_pos/watch_out"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 280.0
margin_top = -25.0
margin_right = 832.0
margin_bottom = 169.0
rect_scale = Vector2( 0.4, 0.4 )
disabled = true
texture_normal = ExtResource( 5 )

[node name="w_hard" type="TextureButton" parent="watch_pos/watch_out"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 580.0
margin_top = -90.0
margin_right = 1131.0
margin_bottom = 105.0
rect_scale = Vector2( 0.4, 0.4 )
disabled = true
texture_normal = ExtResource( 6 )

[node name="watchout_anim" type="AnimationPlayer" parent="watch_pos/watch_out"]
playback_speed = 5.0
anims/watchout_anim = SubResource( 6 )

[node name="exit" type="TextureButton" parent="."]
margin_left = 0.857388
margin_top = 349.808
margin_right = 436.857
margin_bottom = 478.808
rect_scale = Vector2( 0.2, 0.2 )
texture_normal = ExtResource( 8 )

[node name="rantor_tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="watchout_tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="notyet" type="Label" parent="."]
visible = false
margin_left = 20.0
margin_top = 310.0
margin_right = 185.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "OOPS!! , SORRY NOT YET"

[node name="no_info" type="Label" parent="."]
visible = false
margin_left = 20.0
margin_top = 280.0
margin_right = 199.0
margin_bottom = 295.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "YOU WILL UNDERSTAND IT"

[connection signal="pressed" from="rantor_pos/rantor" to="." method="_on_rantor_pressed"]
[connection signal="toggled" from="rantor_pos/rantor" to="." method="_on_rantor_toggled"]
[connection signal="pressed" from="rantor_pos/rantor/info" to="." method="_on_info_pressed"]
[connection signal="pressed" from="rantor_pos/rantor/easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="rantor_pos/rantor/hard" to="." method="_on_hard_pressed"]
[connection signal="animation_finished" from="rantor_pos/rantor/rantor_anim" to="." method="_on_rantor_anim_animation_finished"]
[connection signal="pressed" from="watch_pos/watch_out" to="." method="_on_watch_out_pressed"]
[connection signal="toggled" from="watch_pos/watch_out" to="." method="_on_watch_out_toggled"]
[connection signal="pressed" from="watch_pos/watch_out/w_info" to="." method="_on_w_info_pressed"]
[connection signal="pressed" from="watch_pos/watch_out/w_easy" to="." method="_on_w_easy_pressed"]
[connection signal="pressed" from="watch_pos/watch_out/w_hard" to="." method="_on_w_hard_pressed"]
[connection signal="animation_finished" from="watch_pos/watch_out/watchout_anim" to="." method="_on_rantor_anim_animation_finished"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="tween_completed" from="rantor_tween" to="." method="_on_rantor_tween_tween_completed"]
[connection signal="tween_completed" from="watchout_tween" to="." method="_on_watchout_tween_tween_completed"]
